# tetris

./: .gitattributes  .gitignore  .travis.yml  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE-docs.md  LICENSE.md  README.md  anki-addon.py  appveyor.yml  ci-notes.txt  design.rst  drawing-notes.txt  notes.txt  pixel-art.txt  reverse.txt  steps.txt
CMake/Modules/: FindSDL2.cmake  FindSDL2x64.cmake  GameBuildTypes.cmake  GameHandleBuildType.cmake  GameHandleVersion.cmake  GameVersion.cmake  HandleBuildType.cmake  HandleVersion.cmake
docs/: Makefile  _config.yml
docs/source/: conf.py  design.rst.m4  index.rst
docs/source/api/: api.rst
docs/source/api/utils/log/: init-log.rst  log.rst
docs/source/tutorial/: tutorial.rst
include/: common.h  common.h.in  g_common.h  g_common.h.in  game.h
include/core/: game.h
include/core/game/: camera.h  game.h  players.h
include/data-structures/: bit-array.h  stretchy-buf.h
include/ecs/components/: components-list.h  physics-component.h
include/game/minigames/worms/: events.h
include/handlers/: event-handlers.h
include/utils/: assert.h  error.h  g_ansi-colours.h  g_args.h  g_assert.h  g_log.h  g_status.h  math.h  sdl-wrappers.h  status.h  xmem.h
lib/: bit-array.c  stretchy-buf.c
lib/argtable3/: argtable3.h
lib/data-structures/: bit-array.h  stretchy-buf.h
lib/utils/: xmem.h
scripts/: Rlinter
src/: camera.c  common.c  g_main.c  game.c  loop.c  main.c  map.c
src/core/: events.c  game.c  handle-events.c  loop.c  quit.c  update.c
src/core/game/: game.c  map.c
src/data-structures/: bit-array.c  stretchy-buf.c
src/ecs/: components.c  entity-manager.c
src/ecs/components/: physics-component.c  sprite-component.c
src/ecs/entities/: entity-manager.c
src/ecs/systems/: active-object-draw.c  render-system.c
src/ecs/systems/single/: render-system.c
src/game/: game.c
src/game/minigames/worms/: render.c
src/utils/: args.c  error.c  g_args.c  g_log.c  g_status.c  log.c  math.c  xmem.c
tests/: exampleTestSuite.c  g_test-helpers.c  g_test-helpers.h  test-helpers.c
